[8] Add visible chest
将可见的箱子模型添加进来。

--- a/cplusplus/MainWindow.ui
+++ b/cplusplus/MainWindow.ui
@@ -18,7 +18,7 @@
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="showModelButton">
         <property name="text">
          <string>显示模型</string>
         </property>
